# Am-lich-Viet-Nam

./: .gitignore  AndroidManifest.xml  README.md  build.gradle  gradle.properties  settings.gradle
native/: Cargo.toml
native/src/: lib.rs
res/drawable/: ic_launcher.xml  widget_background.xml  widget_date_background.xml  widget_header_button.xml  widget_today_circle.xml
res/drawable-night/: widget_background.xml  widget_header_button.xml
res/layout/: calendar_widget.xml  calendar_widget_vertical.xml  month_calendar_widget.xml
res/values/: colors.xml  strings.xml  styles.xml
res/values-night/: colors.xml
res/xml/: calendar_widget_1x2_info.xml  calendar_widget_2x1_info.xml  month_calendar_widget_info.xml
src/com/dtinh/lichviet/: CalendarMonthView.java  CalendarWidgetProvider.java  DynamicIconManager.java  HolidayUtil.java  HorizontalDateWidgetProvider.java  LunarCalendar.java  MainActivity.java  MonthCalendarWidgetProvider.java  NativeCore.java  NoteEditorDialog.java  NoteRepository.java  SystemCalendarCompat.java  SystemEventActivity.java  VerticalDateWidgetProvider.java  WheelDatePickerDialog.java  XiaomiNotesBackup.java
tests/: LunarCalendarTest.java
tools/: generate_dynamic_icons.py  generate_widget_previews.py
